# coincoin-miner

./: .gitignore  CMakeLists.txt  README.md  Sha1Hacher.cpp  Sha1Hacher.h  Token.cpp  Token.h  TokenBuilder.cpp  TokenBuilder.h  TokenSimpleHash.cpp  TokenSimpleHash.h  main.cpp  sha1.cpp  sha1.h
